get filter added
